[package]
name = "amp2_mock"
version = "0.18.0"
edition = "2021"
description = "Liquid Wallet Kit - AMP2 mock server for testing"
license = "MIT OR BSD-2-Clause"
publish = false

[[bin]]
name = "amp2_mock"
path = "src/main.rs"

[dependencies]
lwk_common = { version = "0.18.0" }
lwk_signer = { version = "0.18.0" }
lwk_wollet = { version = "0.18.0" }

serde.workspace = true
serde_json.workspace = true
tiny_http = "0.12.0"
