[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
secp256k1 = "0.27"
signer = { path = "../signer" }
tiny_jrpc = { path = "../tiny_jrpc" }
thiserror = "1"
tracing = "0.1"

wollet = { path = "../wollet" }
