[package]
name = "cli"
version = "0.1.0"
edition = "2021"
autotests = false


[dependencies]
anyhow = "1.0.75"
app = { path = "../app" }
rpc_model = { path = "../rpc_model" }
clap = { version = "4.4.6", features = ["derive"] }
# config = "0.13.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
serde_json = "1"
clap_complete = "4.4.4"
uniffi = { version = "0.25.3", features = ["cli"], optional = true }

[dev-dependencies]
shellwords = "1.1.0"
elements = "0.23.0"
electrsd = { version = "0.25.0", features = ["legacy"] }
tempfile = "3.8.0"
bs_containers = { path = "../bs_containers" }

[features]
bindings = ["uniffi"]

[[test]]
name = "e2e"
path = "tests/cli.rs"
