[package]
name = "jade"
version = "0.1.0"
edition = "2021"
autotests = false

[dependencies]
# anyhow = "1"
ciborium = "0.2.1"
hex = "0.4.3"
rand = "0.8.5"
# reqwest = { version = "0.11.19", features = ["blocking", "json"] }
serde = "1"
serde_bytes = "0.11.12"
serde_json = "1"
elements = { version = "0.23.0", features = ["base64", "serde"] }
serialport = { version = "4.2.1", optional = true }
thiserror = "1"

tracing = "0.1"

minreq = { version = "2.9", features = ["https"] }
elements-miniscript = { git = "https://github.com/ElementsProject/elements-miniscript.git", rev = "af410f6f6e4b645977e26e0809acae1a33e986b5" }

common = { path = "../common" }

# tokio = { version = "1.32.0", features = ["rt", "macros"] }


[features]
serial = ["serialport"]

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[dev-dependencies]
tempfile = "3.8.0"
bs_containers = { path = "../bs_containers" }
base64 = "0.21.4"
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
