[package]
name = "ks-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
elements = "0.23.0"
thiserror = "1.0.50"
uniffi = { version = "0.25.3" }
wollet = { path = "../wollet" }

[build-dependencies]
uniffi = { version = "0.25.3", features = ["build"] }

[lib]
crate-type = ["cdylib"]
name = "ks_bindings"
