[package]
name = "lwk_app"
version = "0.15.0"
edition = "2021"
description = "Liquid Wallet Kit - RPC server App"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_app"

[dependencies]
lwk_common = { version = "0.15.0" }
lwk_jade = { version = "0.15.0" }
lwk_signer = { version = "0.15.0" }
lwk_wollet = { version = "0.15.0" }
lwk_rpc_model = { version = "0.13.0" }
lwk_tiny_jrpc = { version = "0.13.0" }

jsonrpc = { version = "0.18.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
secp256k1 = "0.29.1"
thiserror = "1"
log = "0.4.22"
rand = "0.8.5"
schemars = "0.8.16"
home = "0.5.5"
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "blocking",
    "json",
    "rustls-tls",
] }

[features]
serial = ["lwk_jade/serial"]

[dev-dependencies]
enum-iterator = "1.4.1"
tempfile = "3.8.1"
