[package]
name = "lwk_bindings"
version = "0.12.3"
edition = "2021"
description = "Liquid Wallet Kit - Bindings for other languages"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_bindings"

[dependencies]
lwk_common = { version = "0.12.0" }
lwk_signer = { version = "0.12.0" }
lwk_wollet = { version = "0.12.0" }
lwk_test_util = { version = "0.12.0" }
lwk_boltz = { version = "0.1.0", optional = true }
tokio = { version = "1.0", features = [
    "rt",
], optional = true } # move into lwk_boltz
log = { version = "0.4", optional = true }

elements = "0.25.0"
thiserror = "1.0.50"
uniffi = { version = "0.28.2", features = ["bindgen-tests"] }
serde_json = "1"

[build-dependencies]
uniffi = { version = "0.28.2", features = ["build"] }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "lwk"

[features]
default = ["lightning"]                   # remove me, just for now for intellisense
foreign_bindings = []
lightning = ["lwk_boltz", "tokio", "log"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
