[package]
name = "lwk_bindings"
version = "0.17.2"
edition = "2021"
description = "Liquid Wallet Kit - Bindings for other languages"
license = "MIT OR BSD-2-Clause"
exclude = ["tests/", "test_data/", "android_bindings/", "csharp/", "examples/"]
documentation = "https://docs.rs/lwk_bindings"

[dependencies]
lwk_common = { version = "0.17.0" }
lwk_signer = { version = "0.17.0" }
lwk_wollet = { version = "0.17.0" }
lwk_test_util = { version = "0.17.0", optional = true }
lwk_payment_instructions = { version = "0.17.0" }
lwk_boltz = { version = "0.17.0", optional = true }
lwk_simplicity = { version = "0.17.0", optional = true }
tokio = { version = "1.0", features = [
    "rt",
], optional = true } # move into lwk_boltz
log = { version = "0.4", optional = true }

elements.workspace = true
thiserror = { workspace = true }
uniffi = { version = "=0.29.4", features = ["bindgen-tests"] }
serde_json = "1"

[build-dependencies]
uniffi = { version = "=0.29.4", features = ["build"] }

[dev-dependencies]
lwk_test_util = { version = "0.17.0" }
tempfile = "3.8.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "lwk"

[features]
default = ["lightning", "uniffi_builtin_traits"]
foreign_bindings = ["test_env"]
lightning = ["lwk_boltz", "tokio", "log"]
test_env = ["dep:lwk_test_util"]
# Disable for deterministic release builds: uniffi 0.29.4 emits these built-in
# trait exports in nondeterministic order when multiple traits are exported.
# This is fixed on uniffi main and will likely be fixed in uniffi 0.31.2.
uniffi_builtin_traits = []
# Experimental: API behind this feature is unstable and may change without notice.
simplicity = ["lwk_simplicity"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
