[package]
name = "lwk_bindings"
version = "0.18.2"
edition = "2021"
description = "Liquid Wallet Kit - Bindings for other languages"
license = "MIT OR BSD-2-Clause"
exclude = ["tests/", "test_data/", "android_bindings/", "csharp/", "examples/"]
documentation = "https://docs.rs/lwk_bindings"

[dependencies]
lwk_common = { version = "0.18.1" }
lwk_signer = { version = "0.18.1" }
lwk_wollet = { version = "0.18.1" }
lwk_test_util = { version = "0.18.0" }
lwk_payment_instructions = { version = "0.18.1" }
lwk_boltz = { version = "0.18.0", optional = true }
lwk_simplicity = { version = "0.18.0", optional = true }
tokio = { version = "1.0", features = [
    "rt",
], optional = true } # move into lwk_boltz
log = { workspace = true, optional = true }

elements.workspace = true
thiserror = { workspace = true }
uniffi = { version = "=0.29.4", features = ["bindgen-tests"] }
serde_json.workspace = true

[build-dependencies]
uniffi = { version = "=0.29.4", features = ["build"] }

[dev-dependencies]
tempfile.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
name = "lwk"

[features]
default = ["lightning"]
foreign_bindings = []
lightning = ["lwk_boltz", "tokio", "log"]
# Experimental: API behind this feature is unstable and may change without notice.
simplicity = ["lwk_simplicity"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
