[package]
name = "lwk_boltz"
version = "0.1.0"
edition = "2021"

[features]
default = ["blocking"]
blocking = ["tokio"]

[dependencies]
async-trait = "0.1"
boltz-client = { git = "https://github.com/RCasatta/boltz-rust/", rev = "ec5b5b5087e7109a12e6eb1523c6678445d323fa", features = [
    "ws",
    "electrum",
] }
lwk_wollet = { version = "0.12.0", default-features = false, features = [
    "esplora",
    "electrum",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt"], optional = true }
log = "0.4"
env_logger = "0.11.8"
thiserror = "1"
bip39 = { version = "2.0.0", features = ["rand"] }
lightning = { version = "0.1.7", default-features = false }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
base64 = "0.22"
lwk_signer = { version = "0.12.0" }
lwk_common = { version = "0.12.0" }
