[package]
name = "lwk_boltz"
version = "0.14.0"
edition = "2021"
description = "Liquid Wallet Kit - Boltz integration"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_boltz"

[features]
default = ["blocking"]
blocking = ["lwk_wollet/electrum"]

[dependencies]
async-trait = "0.1"
boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust/", rev = "d069db5c8fb4f87fbdbf4186b7a038ebdf64ba6a", features = ["ws", "electrum"] }
lwk_common = { version = "0.14.0" }
lwk_wollet = { version = "0.14.0", default-features = false, features = [
    "esplora",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", default-features = false, features = ["rt", "time"] }
log = "0.4"
env_logger = "0.11.8"
thiserror = "1"
bip39 = { version = "2.0.0", features = ["rand"] }
lightning = { version = "0.1.7", default-features = false }
lnurl-rs = { version = "0.9.0", default-features = false }
aes-gcm-siv = "0.11.0"
rand = "0.8"

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
base64 = "0.22"
lwk_signer = { version = "0.14.0" }
