[package]
name = "lwk_cli"
version = "0.5.1"
edition = "2021"
autotests = false
description = "Liquid Wallet Kit - Command line interface to interact with the RPC server"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_cli"

[dependencies]
anyhow = "1.0.75"
lwk_app = { version = "0.5" }
lwk_rpc_model = { version = "0.4" }
clap = { version = "~4.4", features = ["derive", "env"] }
# config = "0.13.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
serde_json = "1"
clap_complete = "~4.4"
uniffi = { version = "0.26.1", features = ["cli"], optional = true }

[dev-dependencies]
shellwords = "1.1.0"
elements = "0.24.0"
tempfile = "3.8.0"
lwk_containers = { version = "0.3" }
lwk_test_util = { version = "0.4" }


[features]
bindings = ["uniffi"]
serial = ["lwk_app/serial"]
registry = []

[[test]]
name = "e2e"
path = "tests/cli.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
