[package]
name = "lwk_cli"
version = "0.15.0"
edition = "2021"
autotests = false
description = "Liquid Wallet Kit - Command line interface to interact with the RPC server"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_cli"

[lib]
test = false

[dependencies]
lwk_app = { version = "0.15.0" }
lwk_rpc_model = { version = "0.13.0" }

anyhow = "1.0.75"
clap = { version = "~4.5", features = ["derive", "env"] }
# config = "0.13.3"
log = "0.4.22"
env_logger = "0.11.5"
ctrlc = { version = "3.4.1", features = ["termination"] }
serde_json = "1"
clap_complete = "~4.5"
uniffi = { version = "0.28.2", features = ["cli"], optional = true }

[dev-dependencies]
lwk_containers = { version = "0.14.0" }
lwk_test_util = { version = "0.15.0" }

shellwords = "1.1.0"
elements.workspace = true
tempfile = "3.8.0"

[features]
bindings = ["uniffi"]
serial = ["lwk_app/serial"]

[[test]]
name = "e2e"
path = "tests/cli.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
