[package]
name = "lwk_common"
version = "0.18.1"
edition = "2021"
description = "Liquid Wallet Kit - Common utilities"
license = "MIT OR BSD-2-Clause"
exclude = ["test_data/"]
documentation = "https://docs.rs/lwk_common"

[dependencies]
aes-gcm-siv = { version = "0.11", features = ["std"] }
base64 = "0.21.4"
elements.workspace = true
elements-miniscript.workspace = true
qr_code = { version = "2.0.0", features = ["bmp"] }
rand = "0.8"
tempfile.workspace = true
thiserror = { workspace = true }
serde.workspace = true
serde_json.workspace = true
# avoid deps to the workspace

[features]
default = ["amp0"]
amp0 = []
sqlite = ["rusqlite"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.32", optional = true, features = ["bundled"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
