[package]
name = "lwk_containers"
version = "0.13.0"
edition = "2021"
description = "Liquid Wallet Kit - Docker containers for tests environment"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_containers"

[lib]
test = false

[dependencies]
elements.workspace = true
rand = "0.8.5"
tempfile = "3.8.0"
testcontainers = "0.14.0"
