[package]
name = "lwk_jade"
version = "0.15.0"
edition = "2021"
autotests = false
description = "Liquid Wallet Kit - Interact with the Blockstream Jade Hardware Wallet"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_jade"

[dependencies]
lwk_common = { version = "0.15.0" }
lwk_containers = { version = "0.14.0", optional = true }

tempfile = { version = "3.8.0", optional = true }

# anyhow = "1"
serde_cbor = "0.11.2"
hex = "0.4.3"
rand = "0.8.5"
serde = "1"
serde_bytes = "0.11.12"
serde_json = "1"
elements.workspace = true
serialport = { version = "4.7.3", optional = true }
thiserror = "1"

log = "0.4.22"

elements-miniscript.workspace = true

reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "blocking",
    "json",
    "rustls-tls",
] }

tokio = { version = "1.36.0", features = [
    "rt",
    "macros",
    "io-util",
    "sync",
], optional = true }
web-time = "1.1.0"

[features]
default = ["sync", "test_emulator"]
sync = []
serial = ["serialport"]
asyncr = ["tokio"]
test_emulator = ["lwk_containers", "tempfile"]

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[dev-dependencies]
lwk_test_util = { version = "0.15.0" }
lwk_containers = { version = "0.14.0" }

tempfile = "3.8.0"
base64 = "0.21.4"
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
