[package]
name = "lwk_ledger"
version = "0.14.0"
edition = "2021"
description = "Liquid Wallet Kit - Interact with Ledger Hardware Wallet"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_jade"

[dependencies]
lwk_common = "0.14.0"
lwk_containers = { version = "0.14.0", optional = true }

ledger-apdu = "0.11"
elements-miniscript.workspace = true
thiserror = "1"
#ledger-transport-hid = { path = "../../ledger-rs/ledger-transport-hid", version = "0.11.0", optional = true }
ledger-transport-hid = { version = "0.11.0", optional = true }


tokio = { version = "1.36.0", features = [
    "rt",
    "macros",
    "io-util",
    "sync",
], optional = true }
byteorder = "1.5.0"

[dev-dependencies]
lwk_containers = { version = "0.14.0" }
env_logger = "0.11.5"

[features]
default = ["test_emulator"]
test_emulator = ["lwk_containers"]
asyncr = ["tokio"]

serial = [
    "ledger-transport-hid",
] # note it's usb and not serial, but it's consistent with Jade
