[package]
name = "lwk_rpc_model"
version = "0.13.0"
edition = "2021"
description = "Liquid Wallet Kit - Model of data used with the RPC server"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_rpc_model"

[dependencies]
schemars = "0.8.16"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
# avoid deps to the workspace

[dev-dependencies]
serde_json = "1.0.108"
