[package]
name = "lwk_signer"
version = "0.2.0"
edition = "2021"
description = "Liquid Wallet Kit - Signers for PSETs (Partially Signed Elements Transactions)"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_signer"

[dependencies]
bip39 = { version = "2.0.0", features = ["rand"] }
elements-miniscript = "0.3"
thiserror = "1.0.48"
base64 = "0.13.0"

lwk_common = { version = "0.2.0" }
lwk_jade = { version = "0.2.0", optional = true }

# explicitly needed because without jade the dep is taken without the feature and elements-miniscript
# doesn't allow to activate it https://github.com/ElementsProject/elements-miniscript/issues/71
elements = { version = "0.24.0", features = ["base64"] }

[dev-dependencies]
lwk_test_util = { path = "../lwk_test_util" }

[features]
default = ["jade"]
jade = ["lwk_jade"]
