[package]
name = "lwk_signer"
version = "0.5.1"
edition = "2021"
description = "Liquid Wallet Kit - Signers for PSETs (Partially Signed Elements Transactions)"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_signer"

[dependencies]
lwk_common = { version = "0.5" }
lwk_jade = { version = "0.5", optional = true }
lwk_ledger = { version = "0.3", optional = true }

bip39 = { version = "2.0.0", features = ["rand"] }
#elements-miniscript = { version = "0.3.1", features = ["base64"] }
elements-miniscript = { git = "https://github.com/LeoComandini/elements-miniscript", rev = "383e58782695652f359623f97da1d56f9ee076a6", features = ["base64"] }
thiserror = "1.0.48"
base64 = "0.13.0"

[dev-dependencies]
lwk_test_util = { version = "0.4" }

[features]
default = ["jade"]
jade = ["lwk_jade"]
ledger = ["lwk_ledger"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
