[package]
name = "lwk_simplicity"
version = "0.18.0"
edition = "2021"
description = "Liquid Wallet Kit - Utilities to deal with Simplicity transactions"
license = "MIT OR BSD-2-Clause"
exclude = ["tests/", "data/"]
documentation = "https://docs.rs/lwk_simplicity"

[dependencies]
lwk_common = { version = "0.18.0" }
lwk_signer = { version = "0.18.0", default-features = false }
lwk_wollet = { version = "0.18.0", default-features = false }

simplicityhl = { version = "0.5.0" }

thiserror = { workspace = true }

serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }

uuid = { version = "~1.20", default-features = false, features = [
    "serde",
    "v4",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "~1.20", default-features = false, features = ["js"] }

[dev-dependencies]
lwk_test_util = { version = "0.18.0" }
lwk_wollet = { version = "0.18.0", default-features = false, features = [
    "esplora",
    "electrum",
] }
